[gd_scene load_steps=16 format=2]

[ext_resource path="res://app/interface/track/track_view.gd" type="Script" id=1]
[ext_resource path="res://app/icons/generic_add.svg" type="Texture" id=3]
[ext_resource path="res://app/interface/scroller/scroller.tscn" type="PackedScene" id=4]
[ext_resource path="res://app/interface/loading/loading.tscn" type="PackedScene" id=5]
[ext_resource path="res://app/icons/generic_remove.svg" type="Texture" id=6]
[ext_resource path="res://app/interface/icon_button/icon_button.gd" type="Script" id=7]

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="DynamicFont" id=14]

[sub_resource type="Image" id=23]
data = {
"data": PoolByteArray( 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0 ),
"format": "LumAlpha8",
"height": 16,
"mipmaps": false,
"width": 16
}

[sub_resource type="ImageTexture" id=17]
flags = 4
flags = 4
image = SubResource( 23 )
size = Vector2( 16, 16 )

[sub_resource type="StyleBoxTexture" id=18]
texture = SubResource( 17 )
region_rect = Rect2( 0, 0, 16, 16 )
margin_left = 2.0
margin_right = 2.0
margin_top = 2.0
margin_bottom = 2.0

[sub_resource type="StyleBoxEmpty" id=11]

[sub_resource type="Theme" id=12]
HScrollBar/styles/scroll = SubResource( 11 )

[sub_resource type="StyleBoxEmpty" id=21]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[sub_resource type="StyleBoxEmpty" id=22]
content_margin_left = 4.0
content_margin_right = 4.0
content_margin_top = 4.0
content_margin_bottom = 4.0

[node name="TrackView" type="PanelContainer"]
anchor_right = 1.0
margin_bottom = 50.0
mouse_filter = 2
mouse_default_cursor_shape = 2
custom_styles/panel = SubResource( 19 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
margin_right = 1280.0
margin_bottom = 50.0
mouse_filter = 1
custom_fonts/font = SubResource( 14 )
custom_styles/hover = SubResource( 18 )
custom_styles/pressed = SubResource( 18 )
custom_styles/normal = SubResource( 18 )
toggle_mode = true

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 1280.0
margin_bottom = 50.0
mouse_filter = 2
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 1272.0
margin_bottom = 42.0
mouse_filter = 2
custom_constants/separation = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Info" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
margin_right = 1192.0
margin_bottom = 34.0
mouse_filter = 2
size_flags_horizontal = 3
theme = SubResource( 12 )
custom_constants/separation = 0
alignment = 1

[node name="Main" type="HBoxContainer" parent="MarginContainer/HBoxContainer/Info"]
margin_top = 3.0
margin_right = 1192.0
margin_bottom = 17.0
mouse_filter = 2
custom_constants/separation = 0

[node name="Loading" parent="MarginContainer/HBoxContainer/Info/Main" instance=ExtResource( 5 )]
margin_right = 0.0
margin_bottom = 14.0
mouse_filter = 2

[node name="Title" parent="MarginContainer/HBoxContainer/Info/Main" instance=ExtResource( 4 )]
margin_right = 1192.0
size_flags_horizontal = 3

[node name="Meta" parent="MarginContainer/HBoxContainer/Info" instance=ExtResource( 4 )]
modulate = Color( 1, 1, 1, 0.74902 )
margin_top = 17.0
margin_right = 1192.0
margin_bottom = 31.0
text = "Loading..."

[node name="AddToQueue" type="Button" parent="MarginContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1196.0
margin_right = 1228.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 21 )
custom_styles/pressed = SubResource( 21 )
custom_styles/normal = SubResource( 21 )
text = "TRACK_ADD_TO_QUEUE"
icon = ExtResource( 3 )
clip_text = true
script = ExtResource( 7 )

[node name="Remove" type="Button" parent="MarginContainer/HBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 1232.0
margin_right = 1264.0
margin_bottom = 34.0
mouse_default_cursor_shape = 2
custom_constants/hseparation = 0
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 22 )
custom_styles/normal = SubResource( 22 )
text = "TRACK_REMOVE"
icon = ExtResource( 6 )
clip_text = true
script = ExtResource( 7 )

[node name="LongPress" type="Timer" parent="."]
wait_time = 0.3
one_shot = true

[connection signal="button_down" from="Button" to="." method="_on_Button_button_down"]
[connection signal="gui_input" from="Button" to="." method="_on_Button_gui_input"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/AddToQueue" to="." method="_on_AddToQueue_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="timeout" from="LongPress" to="." method="_on_LongPress_timeout"]
